# TeknicPython

./: .clangd  .dockerignore  .gitignore  CmakeLists.txt  CmakeLists2.txt  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
includes/: TeknicMotors.hpp
linux_sdk/: Teknic_SC4Hub_USB_Driver.tar  readme.txt  sFoundation.tar
linux_sdk/sFoundation/Beta_SDK_Examples/: README.txt
python_tests/: python_example.py  python_test.py
python_tests/stubs/: TeknicMotors.pyi
sdk/: sFoundation Help.lnk
sdk/CSharp Examples/: CSharp_SDK_Examples.sln  sFoundationCopy.bat
sdk/CSharp Examples/CLRWrapper/: AssemblyInfo.cpp  CLRWrapper.cpp  CLRWrapper.h  CLRWrapper.sln  CLRWrapper.vcxproj  CLRWrapper.vcxproj.filters  Enums.h  FieldObjs.h  ReadMe.txt  RegisterObjs.h  ValueObjs.h
sdk/CSharp Examples/CSharpGPIOEx/: CSharpGPIOEx.csproj  GPIO.cs
sdk/CSharp Examples/CSharpHelloWorld/: CSharpHelloWorld.csproj  HelloWorld.cs
sdk/CSharp Examples/CSharpHomingEx/: CSharpHomingEx.csproj  Homing.cs
sdk/CSharp Examples/CSharpMotionEx/: CSharpMotionEx.csproj  Motion.cs
sdk/CSharp Examples/CSharpSingleThreadedEx/: Axis.cs  CSharpSingleThreadedEx.csproj  SingleThreaded.cs
sdk/CSharp Examples/CSharpStatusAlertsEx/: CSharpStatusAlertsEx.csproj  StatusAlerts.cs
sdk/examples/: sFoundationCopy.bat
sdk/examples/1-HelloWorld/: HelloWorld.vcxproj  README.TXT
sdk/examples/2-Example-StatusAlerts/: Example-StatusAlerts.vcxproj  README.TXT
sdk/examples/3a-Example-Motion/: Example-Motion.vcxproj
src/: MotorManager.cpp  bindings.cpp  main.cpp
(+84 files in other folders)
