[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.12",
    "pybind11-stubgen>=2.5.5",
]
build-backend = "scikit_build_core.build"

[project]
name = "TeknicMotors"
version = "0.1.0"
description = "Python bindings for Teknic ClearPath SC motors"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-G", "Ninja"]
build-dir = "build/skbuild-release"
wheel.packages = []

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"


[dependency-groups]
dev = ["pybind11>=2.12", "pybind11-stubgen>=2.5.5"]
